tests/codegen/errors/codegen/codegen/symbol.unbound.local/atom.menu.error.codegen.symbol.unbound.local.005/menu-codegen-symbol.unbound.local-005.mon
;; TEST-ID: tests.codegen.menu.errors.codegen.symbol.unbound.local.005
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: codegen/symbol.unbound.local
;; TEST-MENU: errors/codegen/symbol.unbound.local/atom.menu.error.codegen.symbol.unbound.local.005
;; TEST-MENU-PATH: codegen/errors/codegen/symbol.unbound.local/atom.menu.error.codegen.symbol.unbound.local.005
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin codegen diagnostic: undefined symbol
;; TEST-ATOM: atom.menu.error.codegen.symbol.unbound.local.005
;; TEST-CODEGEN-ATOM: atom.menu.error.codegen.symbol.unbound.local.005
;; TEST-ATOM-LEAF: atom.menu.error.codegen.symbol.unbound.local.005
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: codegen
;; TEST-ERROR-FAMILY: symbol.unbound.local
;; TEST-ERROR-MESSAGE: undefined symbol
;; TEST-ERROR-SOURCE: codegen.c
;; TEST-ERROR-PATH: codegen.c:diagnostic
;; TEST-CODEGEN-PATH: diagnostic.codegen.symbol.unbound.local
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: codegen
;; TEST-TAG: menu
;; TEST-COVERAGE: codegen.c diagnostic undefined symbol
;; TEST-USES-ATOM: atom.menu.error.codegen.symbol.unbound.local.005
;; TEST-USES-ATOM: atom.error.codegen
;; TEST-USES-ATOM: atom.error.codegen.symbol.unbound.local
;; TEST-USES-ATOM: atom.codegen.error
;; TEST-DEPENDS-ON: atom.codegen.expr.dispatch
;; TEST-REFINES: atom.error.codegen
;; TEST-REFINES: atom.error.codegen.symbol.unbound.local
;; TEST-REFINES: atom.codegen.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors codegen codegen

(module Main)
(show missing_symbol_menu)
;; codegen menu variant 5
